--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ structlog = "^23.1.0"
 requests = "^2.31.0"
 datetime = "^5.2"
 ipython = "^8.14.0"
+web3 = "^6.9.0"
+py-solc-x = "^1.1.1"
+eth-utils = "^2.2.0"
+python-dotenv = "^1.0.0"
+ecdsa = "^0.18.0"
 
 
 [tool.poetry.group.dev.dependencies]
